--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@
   --video-bg: #000;
   --border-radius: 6px;
   --shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  --header-bg: #0d47a1; /* Dark blue for header */
+  --header-bg: #1e2b4f;; /* Dark blue for header */
   --text-light: #f5f5f5;
   --body-bg: #1e2b4f; /* Navy blue background */
 }
